Mejora en la logica de los controller. Se agregaron DTOs de las entities. Se arreglo peticiones con respuestas cicladas.